--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
     <section id="everything-else">
-      <h1 id="title">MonkeyGG2</h1>
+      <h1 id="title">Gogl</h1>
       <logo>
         <img src="imgs/icon-256-256.png" alt="MonkeyGG2 Icon" />
       </logo>
